[package]
name = "pnio_hart"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["amqp", "mqtt", "http", "prov_client"]
http = []
mqtt = []
amqp = []
prov_client = []

[dependencies]
anyhow = "1.0.71"
hex = "0.4.3"
uuid = { version = "1.4.0",  features = ["v4", "fast-rng", "macro-diagnostics"]}
# actix-web = "4"
log = "0.4.19"
env_logger = "0.10.0"
kafka = { version = "0.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
clap = { version = "4.3.19", features = ["derive"] }
serde_json = "1.0.104"
signal-hook = "0.3.17"
chrono = { version = "0.4.26", features = ["clock"] }

[build-dependencies]
bindgen="0.65.1"
cmake = "0.1.44"
pkg-config = "0.3.18"
